--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,14 @@
 .gallery__link:hover {
   cursor: zoom-in;
 }
+
+.sl-overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: #3c4042;
+  display: none;
+  z-index: 1035;
+}
